add column remapping code

--- a/Build_Data_source.ipynb
+++ b/Build_Data_source.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,20 @@
       "ascii (3813, 2279)\n",
       "Data/BHCF20230930.txt\n",
       "ascii (448, 2279)\n",
+      "Data/BHCF20220930.txt\n",
+      "ascii (429, 2328)\n",
       "Data/BHCF20240630.txt\n",
       "ascii (3829, 2224)\n",
+      "Data/BHCF20221231.txt\n",
+      "ascii (3919, 2328)\n",
       "Data/BHCF20240331.txt\n",
       "ascii (454, 2224)\n",
       "Data/BHCF20250331.txt\n",
       "ascii (462, 2224)\n",
       "Data/BHCF20240930.txt\n",
       "ascii (446, 2224)\n",
+      "Data/BHCF20220630.txt\n",
+      "ascii (3957, 2327)\n",
       "Data/BHCF20241231.txt\n",
       "ISO-8859-1 (3804, 2224)\n",
       "Data/BHCF20230630.txt\n",
@@ -84,7 +90,9 @@
       "Data/BHCF20250930.txt\n",
       "ascii (55, 2224)\n",
       "Data/BHCF20230331.txt\n",
-      "ascii (444, 2328)\n"
+      "ascii (444, 2328)\n",
+      "Data/BHCF20220331.txt\n",
+      "ascii (432, 2327)\n"
      ]
     }
    ],
@@ -106,19 +114,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(21391, 2328)\n"
+      "(30128, 2328)\n"
      ]
     }
    ],
    "source": [
     "print(combined_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dddf = pd.read_csv('/Users/jacksonlipfert/Downloads/MDRM/MDRM_CSV.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_9939/756459364.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  short_dddf['Full Code'] = short_dddf['Mnemonic'] + short_dddf['Item Code']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dddf.head()\n",
+    "short_dddf = dddf[['Mnemonic','Item Code','Item Name']]\n",
+    "\n",
+    "\n",
+    "short_dddf['Full Code'] = short_dddf['Mnemonic'] + short_dddf['Item Code']\n",
+    "important_codes = ['RSSD', 'BHBC', 'BHCA', 'BHCB', 'BHCK', 'BHCM', 'BHCP', 'BHCT', 'BHCW',\n",
+    "       'BHCX', 'BHCY', 'BHDM', 'BHFN', 'BHOD', 'BHPA', 'BHPX', 'BHSP', 'BHSX',\n",
+    "       'BHTX', 'TEXT']\n",
+    "short_dddf = short_dddf[short_dddf['Mnemonic'].isin(important_codes)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NET INCOME (LOSS): BHBC4340\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF THE SALE OF OTHER ASSETS WITH RECOURSE\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF LOAN ASSETS THAT WERE SOLD WITH RECOURSE\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF DEFEASED DEBT\n",
+      "NET INCOME (LOSS): BHCK4340\n",
+      "NET INCOME BEFORE INCOME TAXES; EXTRAORDINARY ITEMS; AND OTHER ADJUSTMENTS ON A FULLY TAXABLE EQUIVALENT BASIS\n",
+      "NET INCOME FOR ALL INSURANCE-RELATED ACTIVITIES\n",
+      "NET INCOME: BHCKC246\n",
+      "NET INCOME: BHCKC250\n",
+      "LESS: NET INCOME (LOSS) ATTRIBUTABLE TO NONCONTROLLING (MINORITY) INTERESTS\n",
+      "NET INCOME (LOSS) ATTRIBUTABLE TO BANK AND NONCONTROLLING MINORITY INTERESTS\n",
+      "NET INCOME FROM SERVICE CORPORATION/SUBSIDIARIES (SEE NOTE BELOW)\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - PROVISION FOR DEFERRED INCOME TAXES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - (GAIN) OR LOSS ON SALES OF ASSETS\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - EQUITY IN UNDISTRIBUTED (EARNINGS) LOSSES OF SUBSIDIARIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - EQUITY IN EXTRAORDINARY ITEMS OF SUBSIDIARIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER LIABILITIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER ASSETS\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - OTHER; NET\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - TOTAL ADJUSTMENTS\n",
+      "NET INCOME (LOSS): BHCP4340\n",
+      "NET INCOME (LOSS): BHCT4340\n",
+      "NET INCOME (LOSS): BHPA4340\n",
+      "NET INCOME (LOSS): BHSP4340\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create mapper\n",
+    "\n",
+    "\n",
+    "column_mapper = {}\n",
+    "\n",
+    "#Columns that appear across multiple types of companies with the same balance sheet name, need to keep code to disambiguate\n",
+    "special_columns = [\n",
+    "    'TOTAL ASSETS',\n",
+    "    'TOTAL EQUITY',\n",
+    "    'TOTAL EQUITY CAPITAL',\n",
+    "    'NET INCOME',\n",
+    "    'NET INCOME (LOSS)'\n",
+    "    ]\n",
+    "\n",
+    "def get_name_from_full_code(fullcode, df):\n",
+    "    '''get column name from full code found in data dictionary'''\n",
+    "    column = df['Item Name'][df['Full Code'] == fullcode]\n",
+    "    col_name = column.iloc[0]\n",
+    "    return col_name\n",
+    "\n",
+    "\n",
+    "#Loop over short data dictionary and populate column mapper with name\n",
+    "for code in short_dddf['Full Code']:\n",
+    "    column_mapper[code] = get_name_from_full_code(code,short_dddf)\n",
+    "\n",
+    "\n",
+    "def disambiguate_column_mapper(column_mapper, special_columns):\n",
+    "    '''Loop over column mapper and replace ambigious columns (found in special_columns)'''\n",
+    "\n",
+    "    for key,value in column_mapper.items():\n",
+    "        if value in special_columns:\n",
+    "            column_mapper[key] = f'{value}: {key}' \n",
+    "    return column_mapper\n",
+    "\n",
+    "#Final column mapper\n",
+    "disambig_column_mapper = disambiguate_column_mapper(column_mapper, special_columns)\n",
+    "\n",
+    "#check to make sure columns have been renamed\n",
+    "column_name_in_question = 'NET INCOME'\n",
+    "for key,value in disambig_column_mapper.items():\n",
+    "    if column_name_in_question in str(value):\n",
+    "        print(value)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(30128, 2328)\n"
+     ]
+    }
+   ],
+   "source": [
+    "renamed_combined_df = combined_df.rename(columns=disambig_column_mapper)\n",
+    "print(renamed_combined_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['REPORTING DATE (CC;YR;MO;DA)',\n",
+      "       'LESS: NET UNREALIZED GAINS (LOSSES) ON AVAILABLE-FOR-SALE DEBT SECURITIES (IF A GAIN; REPORT AS A POSITIVE VALUE; IF A LOSS; REPORT AS A NEGATIVE VALUE)',\n",
+      "       'ACCUMULATED NET GAINS (LOSSES)ON CASH-FLOW HEDGES (IF A GAIN; REPORT AS A POSITIVE VALUE; IF A LOSS; REPORT AS A NEGATIVE VALUE)',\n",
+      "       'LESS: AMOUNTS RECORDED IN AOCI ATTRIBUTED TO DEFINED BENEFIT POSTRETIREMENT PLANS RESULTING FROM THE INITIAL AND SUBSEQUENT APPLICATION OF THE RELEVANT GAAP STANDARDS THAT PERTAIN TO SUCH PLANS (IF A GAIN; REPORT AS A POSITIVE VALUE; IF A LOSS; REPORT AS A NEGATIVE VALUE)',\n",
+      "       'LESS: NET UNREALIZED GAINS (LOSSES) ON HELD-TO-MATURITY SECURITIES THAT ARE INCLUDED IN AOCI (IF A GAIN; REPORT AS A POSITIVE VALUE; IF A LOSS; REPORT AS A NEGATIVE VALUE)',\n",
+      "       'EQUITY CAPITAL; MOST RECENTLY REPORTED FOR THE END OF PREVIOUS CALENDAR YEAR (I.E.; AFTER ADJUSTMENTS FROM AMENDED REPORTS OF INCOME)',\n",
+      "       'LONG-TERM DEBT REPORTED IN SCHEDULE HC; ITEMS 3290; 3293; AND 4062 ON THE BALANCE SHEET THAT IS SCHEDULED TO MATURE WITHIN ONE YEAR',\n",
+      "       'AMOUNT OF INTERCOMPANY LIABILITIES REPORTED IN ITEMS 5041; 5043; AND 5045 THAT QUALIFY AS LIABILITIES SUBORDINATED TO CLAIMS OF GENERAL CREDITORS',\n",
+      "       'ALL CHANGES IN INVESTMENTS AND ACTIVITIES HAVE BEEN REPORTED TO THE FEDERAL RESERVE ON THE BANK HOLDING COMPANY REPORT OF CHANGES IN INVESTMENTS AND ACTIVITIES (FR Y-6A)?',\n",
+      "       'DESCRIPTION OF THE FIRST COMPONENT OF OTHER NONINTEREST INCOME THAT EXCEED 10% OF OTHER NONINTEREST INCOME (4078) (EXCLUDING AMOUNTS REPORTED IN ITEMS 8560 AND 8561)',\n",
+      "       ...\n",
+      "       'FOURTH ITEMIZED AMOUNT THAT EXCEEDS $100;000 AND EXCEED 25% OF ALL OTHER ASSETS MEASURED AT FAIR VALUE ON A RECURRING BASIS (RC-Q 6.) - TOTAL FAIR VALUE REPORTED ON SCHEDULE RC',\n",
+      "       'FIRST ITEMIZED AMOUNT THAT EXCEEDS $100;000 AND EXCEED 25% OF ALL OTHER LIABILITIES MEASURED AT FAIR VALUE ON A RECURRING BASIS (RC-Q 13.) - TOTAL FAIR VALUE REPORTED ON BALANCE SHEET',\n",
+      "       'SECOND ITEMIZED AMOUNT THAT EXCEEDS $100;000 AND EXCEED 25% OF ALL OTHER LIABILITIES MEASURED AT FAIR VALUE ON A RECURRING BASIS (RC-Q 13.) - TOTAL FAIR VALUE REPORTED ON BALANCE SHEET',\n",
+      "       'THIRD ITEMIZED AMOUNT THAT EXCEEDS $100;000 AND EXCEED 25% OF ALL OTHER LIABILITIES MEASURED AT FAIR VALUE ON A RECURRING BASIS (RC-Q 13.) - TOTAL FAIR VALUE REPORTED ON BALANCE SHEET',\n",
+      "       'FOURTH ITEMIZED AMOUNT THAT EXCEEDS $100;000 AND EXCEED 25% OF ALL OTHER LIABILITIES MEASURED AT FAIR VALUE ON A RECURRING BASIS (RC-Q 13.) - TOTAL FAIR VALUE REPORTED ON BALANCE SHEET',\n",
+      "       'SEC REPORTING STATUS',\n",
+      "       'DESCRIPTION OF THE FIRST COMPONENT OF OTHER NONINTEREST INCOME THAT EXCEED 10% OF OTHER NONINTEREST INCOME (4078) (EXCLUDING AMOUNTS REPORTED IN ITEMS 8560 AND 8561)',\n",
+      "       'DESCRIPTION OF THE SECOND COMPONENT OF OTHER NONINTEREST INCOME THAT EXCEED 10% OF OTHER NONINTEREST INCOME (4078) (EXCLUDING AMOUNTS REPORTED IN ITEMS 8560 AND 8561)',\n",
+      "       'DESCRIPTION OF THE THIRD COMPONENT OF OTHER NONINTEREST INCOME THAT EXCEED 10% OF OTHER NONINTEREST INCOME (4078) (EXCLUDING AMOUNTS REPORTED IN ITEMS 8560 AND 8561)',\n",
+      "       'URL FOR THE REPORTING BANK HOLDING COMPANY'S WEB PAGE THAT DISPLAYS RISK DISCLOSURES; INCLUDING THOSE ABOUT CREDIT AND MARKET RISK'],\n",
+      "      dtype='object', length=132)\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_string = 'REPORT'\n",
+    "matching_columns = renamed_combined_df.columns[renamed_combined_df.columns.str.contains(search_string)]\n",
+    "print(matching_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ENTITY SHORT NAME</th>\n",
+       "      <th>REPORTING DATE (CC;YR;MO;DA)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HSBC USA</td>\n",
+       "      <td>20250630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SOUTHERN NAT CORP</td>\n",
+       "      <td>20250630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WOODTRUST FC</td>\n",
+       "      <td>20250630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AMALGAMATED INV CO</td>\n",
+       "      <td>20250630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BANK MGMT</td>\n",
+       "      <td>20250630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30123</th>\n",
+       "      <td>EB ACQ CO II LLC</td>\n",
+       "      <td>20220331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30124</th>\n",
+       "      <td>CSBH LLC</td>\n",
+       "      <td>20220331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30125</th>\n",
+       "      <td>CARTER BSHRS</td>\n",
+       "      <td>20220331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30126</th>\n",
+       "      <td>AMALGAMATED FNCL CORP</td>\n",
+       "      <td>20220331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30127</th>\n",
+       "      <td>SOFI TECHS</td>\n",
+       "      <td>20220331</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30128 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ENTITY SHORT NAME  REPORTING DATE (CC;YR;MO;DA)\n",
+       "0                   HSBC USA                      20250630\n",
+       "1          SOUTHERN NAT CORP                      20250630\n",
+       "2               WOODTRUST FC                      20250630\n",
+       "3         AMALGAMATED INV CO                      20250630\n",
+       "4                  BANK MGMT                      20250630\n",
+       "...                      ...                           ...\n",
+       "30123       EB ACQ CO II LLC                      20220331\n",
+       "30124               CSBH LLC                      20220331\n",
+       "30125           CARTER BSHRS                      20220331\n",
+       "30126  AMALGAMATED FNCL CORP                      20220331\n",
+       "30127             SOFI TECHS                      20220331\n",
+       "\n",
+       "[30128 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "renamed_combined_df[['ENTITY SHORT NAME','REPORTING DATE (CC;YR;MO;DA)']]"
    ]
   }
  ],
