start df filtering step

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -229,17 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3529    RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OT...\n",
-      "4771    RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OT...\n",
-      "7091    RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OT...\n",
-      "7101    RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OT...\n",
+      "68622    ORGANIZATION TYPE\n",
       "Name: Item Name, dtype: object\n"
      ]
     },
@@ -247,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_3191/1251144850.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_3191/474950684.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -267,7 +264,7 @@
     "       'BHTX', 'TEXT']\n",
     "short_dddf = short_dddf[short_dddf['Mnemonic'].isin(important_codes)]\n",
     "\n",
-    "print(short_dddf['Item Name'][short_dddf['Item Code'] == 'A223'])\n"
+    "print(short_dddf['Item Name'][short_dddf['Item Code'] == '9047'])\n"
    ]
   },
   {
@@ -378,14 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223'], dtype='object')\n"
+      "Index(['ORGANIZATION TYPE: RSSD9047'], dtype='object')\n"
      ]
     }
    ],
@@ -394,7 +391,7 @@
     "\n",
     "#print(renamed_dfq2.columns.str.contains('NAME'))\n",
     "\n",
-    "search_string = 'BHCAA223'\n",
+    "search_string = 'RSSD9047'\n",
     "matching_columns = renamed_df.columns[renamed_df.columns.str.contains(search_string)]\n",
     "print(matching_columns)\n",
     "#print(renamed_dfq2['REPORTING DATE (CC;YR;MO;DA)'])\n",
@@ -413,12 +410,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ORGANIZATION TYPE: RSSD9047\n",
+       "1     3510\n",
+       "6      140\n",
+       "11      62\n",
+       "3       27\n",
+       "4        3\n",
+       "13       3\n",
+       "2        2\n",
+       "99       1\n",
+       "12       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Filter just to BHCs\n",
+    "\n",
+    "#Think we want 1 only\n",
+    "renamed_df[\"ORGANIZATION TYPE: RSSD9047\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ok, so what needs to happen now? I have two dataframes both of which have the same columns and I want to mix them together in such a way that I can compare values across time\n",
     "\n",
     "I have a reporting date which matches the file date which is good. I could union the data and use the bank name and reporting date to compare over time?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(353,)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine Bank Health\n",
+    "renamed_df[\"Tier 1 Capital Ratio\"] = renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206']/renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223']\n",
+    "\n",
+    "renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206'][renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206'].isna() == False].shape\n",
+    "\n",
+    "renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223'][renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223'].isna() == False].shape\n",
+    "\n",
+    "\n"
    ]
   },
   {
