add 5 measures of bank health

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -375,14 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['ORGANIZATION TYPE: RSSD9047'], dtype='object')\n"
+      "Index(['TOTAL INVESTMENT SECURITIES - BOOK VALUE: BHSP0390'], dtype='object')\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
     "\n",
     "#print(renamed_dfq2.columns.str.contains('NAME'))\n",
     "\n",
-    "search_string = 'RSSD9047'\n",
+    "search_string = '0390'\n",
     "matching_columns = renamed_df.columns[renamed_df.columns.str.contains(search_string)]\n",
     "print(matching_columns)\n",
     "#print(renamed_dfq2['REPORTING DATE (CC;YR;MO;DA)'])\n",
@@ -453,28 +453,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(353,)"
+       "liquidity_ratio\n",
+       "0.000000    260\n",
+       "0.000003      1\n",
+       "0.001854      1\n",
+       "0.000002      1\n",
+       "0.001075      1\n",
+       "           ... \n",
+       "0.006586      1\n",
+       "0.005950      1\n",
+       "0.000018      1\n",
+       "0.018786      1\n",
+       "0.006820      1\n",
+       "Name: count, Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine Bank Health\n",
-    "renamed_df[\"Tier 1 Capital Ratio\"] = renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206']/renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223']\n",
     "\n",
-    "renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206'][renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCW7206'].isna() == False].shape\n",
+    "renamed_df['ENTITY SHORT NAME: RSSD9010'][renamed_df['TIER 1 RISK-BASED CAPITAL RATIO: BHCA7206'].isna() == False]\n",
     "\n",
-    "renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223'][renamed_df['RISK-WEIGHTED ASSETS (NET OF ALLOWANCES AND OTHER DEDUCTIONS): BHCAA223'].isna() == False].shape\n",
+    "renamed_df['non_performing_loan_ratio'] = (renamed_df['TOTAL LOANS AND LEASE FINANCE RECEIVABLES: NONACCRUAL: BHCK1403'] + renamed_df['TOTAL LOANS AND LEASE FINANCING RECEIVABLES: PAST DUE 30-89 DAYS AND STILL ACCRUING: BHCK1406']) / renamed_df['TOTAL LOANS AND LEASES; NET OF UNEARNED INCOME: BHCK2122']\n",
     "\n",
+    "renamed_df['return_on_assets'] = renamed_df['NET INCOME (LOSS): BHCK4340']/renamed_df['TOTAL ASSETS: BHCK2170']\n",
+    "\n",
+    "renamed_df['return_on_equity'] = renamed_df['NET INCOME (LOSS): BHCK4340'] / renamed_df['TOTAL EQUITY CAPITAL: BHCK3210']\n",
+    "\n",
+    "renamed_df['liquidity_ratio'] = (renamed_df['CASH AND BALANCES DUE FROM DEPOSITORY INSTITUTIONS: BHCP0010'].fillna(0) + renamed_df['TOTAL INVESTMENT SECURITIES - BOOK VALUE: BHSP0390'].fillna(0)) / renamed_df['TOTAL ASSETS: BHCK2170']\n",
     "\n"
    ]
   },
